--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGODB_URL= "mongodb+srv://rohitkadav02:Rohit8010@cluster0.udfbmrv.mongodb.net/"
+MONGODB_URL= "mongodb+srv://rohitkadav02:Rohit8010@cluster0.udfbmrv.mongodb.net"
 JWT_SECRET ="secret#text"
