--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
-node_modules
+# Node.js dependencies
+node_modules/
+dist/
+build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Environment files
+.env
+**/note/.env
+
+# Optional: Ignore dotenv files anywhere in the project
+*.env
+.env.*
+
+# IDE settings
+.vscode/
+.idea/
